--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class="container">
     <h1>Convertisseur Hexa</h1>
     <p style="color:#666; font-size:0.9em;">Entrez une valeur (ex: FF ou 1A)</p>
